Sugati/src/objects/Supplier_Booking__c.object
<CustomObject>
    <description>Booking Options. All elements are stored here because Itinerary options are coming out in itemised way.</description>
    <fields>
        <fullName>Quote__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Quote</label>
        <referenceTo>Quote</referenceTo>
        <relationshipLabel>Supplier Booking</relationshipLabel>
        <relationshipName>Supplier_Booking</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>SB_Adjustment__c</fullName>
        <label>Adjustment</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>SB_Arrival_Airport_l__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Arrival Airport</label>
        <referenceTo>Airport__c</referenceTo>
        <relationshipLabel>Supplier Booking</relationshipLabel>
        <relationshipName>Supplier_Booking</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>SB_Arrival_Terminal__c</fullName>
        <label>Arrival Terminal</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SB_Avrage_Margin__c</fullName>
        <formula>Sum_Margin__c/Total_Cost_Records__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Avrage Margin</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>SB_Base_Currency__c</fullName>
        <label>Base Currency</label>
        <picklist>
            <picklistValues>
                <fullName>AED</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AUD</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BRL</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CAD</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CHF</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>DKK</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>EUR</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>FJD</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>GBP</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>HKD</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>HUF</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ISK</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>JOD</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>MAD</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>MUR</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>MYR</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>NAD</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>NOK</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>NZD</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>OMR</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>PGK</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>PLN</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>QAR</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>RUB</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>SEK</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>SGD</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>THB</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>USD</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ZAR</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>SB_Booking_No__c</fullName>
        <label>Booking No.</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SB_Booking_Ref__c</fullName>
        <label>Booking Ref</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SB_Booking_Status__c</fullName>
        <label>Booking Status</label>
        <picklist>
            <picklistValues>
                <fullName>Booked</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>SB_Carrier__c</fullName>
        <label>Carrier</label>
        <picklist>
            <picklistValues>
                <fullName>Adria Airways</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Aegean</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Aer Arann Express</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Aer Lingus</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Aero California</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Aeroflot Airlines</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Aerogal</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Aerolineas Argentinas</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Aerolineas Del Sur</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Aerolink</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Aeromexico</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Aeropostal</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>African Airways</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Air Algerie</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Air Asia</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Air Bagan</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Air Berlin</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Air Blue</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Air Botswana Pty.</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Air Burkina</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Air Caledonie</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Air Caledonie International</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Air Canada</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Air Caraibes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Air China</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Air Dolomiti</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Air Engiadina</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Air Europa</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Air Excel</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Air Fiji</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>SB_Check_In_Time__c</fullName>
        <label>Check In Time</label>
        <length>5</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SB_Class__c</fullName>
        <label>Class</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SB_Client_Group__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Client Group</label>
        <referenceTo>Client_Group__c</referenceTo>
        <relationshipLabel>Supplier Booking</relationshipLabel>
        <relationshipName>Supplier_Booking</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>SB_Commission_Due_Date__c</fullName>
        <label>Commission Due Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>SB_Cost_Group__c</fullName>
        <label>Cost Group</label>
        <picklist>
            <picklistValues>
                <fullName>BASE</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>QSUP</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>SB_Cost_PP__c</fullName>
        <formula>0</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Cost Per Person</inlineHelpText>
        <label>Cost PP</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>SB_Cost_Type__c</fullName>
        <description>This will be used for booking options other than Accommodation and Flights</description>
        <label>Cost_Type</label>
        <picklist>
            <picklistValues>
                <fullName>Car</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Taxi</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Excursion</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Extra</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>SB_Cost__c</fullName>
        <label>Cost</label>
        <summarizedField>Supplier_Cost__c.SC_Total_Net_CostSC__c</summarizedField>
        <summaryFilterItems>
            <field>Supplier_Cost__c.SC_Selected__c</field>
            <operation>equals</operation>
            <value>True</value>
        </summaryFilterItems>
        <summaryForeignKey>Supplier_Cost__c.SC_Supplier_Booking__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>SB_Day__c</fullName>
        <label>Day</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>SB_Departure_Airport_l__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Departure Airport</label>
        <referenceTo>Airport__c</referenceTo>
        <relationshipLabel>Supplier Booking (Departure Airport)</relationshipLabel>
        <relationshipName>Supplier_Booking1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>SB_Departure_Terminal__c</fullName>
        <label>Departure Terminal</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SB_Departure_Time__c</fullName>
        <label>Departure Time</label>
        <length>5</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SB_Drop_off_Point__c</fullName>
        <label>Drop off Point</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SB_Duration__c</fullName>
        <label>Duration</label>
        <precision>4</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>SB_Exchange_Rate_Look_Up__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>If Based Cost is not in GBP.</description>
        <inlineHelpText>If Based Cost is not in GBP.</inlineHelpText>
        <label>Exchange Rate Look Up</label>
        <referenceTo>Exchange_Rate__c</referenceTo>
        <relationshipLabel>Supplier Booking</relationshipLabel>
        <relationshipName>Supplier_Booking</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>SB_Flight_No__c</fullName>
        <label>Flight No</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SB_Flight_Ref__c</fullName>
        <label>Flight Ref</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SB_From_Date__c</fullName>
        <label>From Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>SB_From_Place__c</fullName>
        <label>From Place</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SB_From_Station__c</fullName>
        <label>From Station</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SB_From_Time__c</fullName>
        <label>From Time</label>
        <length>5</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SB_Ground_Handler__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Ground Handler</label>
        <referenceTo>Supplier__c</referenceTo>
        <relationshipLabel>Supplier Booking (Ground Handler)</relationshipLabel>
        <relationshipName>Supplier_Booking1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>SB_Holiday_Suggestion__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Holiday Suggestion</label>
        <referenceTo>Holiday_Suggestions__c</referenceTo>
        <relationshipLabel>Supplier Booking</relationshipLabel>
        <relationshipName>Supplier_Booking</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>SB_Holiday_Type__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Holiday Type</label>
        <referenceTo>Holiday_Type__c</referenceTo>
        <relationshipLabel>Supplier Booking</relationshipLabel>
        <relationshipName>Supplier_Booking</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>SB_Invoice_Notes__c</fullName>
        <label>SB Invoice Notes</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>SB_Is_Standard__c</fullName>
        <defaultValue>true</defaultValue>
        <label>Is_Standard</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>SB_Itinerary_Description__c</fullName>
        <label>Itinerary Description</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>SB_Jet_Model__c</fullName>
        <label>Jet Model</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SB_Length_of_Journey__c</fullName>
        <label>Length of Journey</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SB_Local_Arrangements_Content__c</fullName>
        <label>Local Arrangements Content</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>SB_Lock__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Lock</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>SB_Luggage_Note__c</fullName>
        <label>Luggage Note</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SB_Margin__c</fullName>
        <description>Actual Margin</description>
        <inlineHelpText>Actual Margin</inlineHelpText>
        <label>Margin</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>SB_Meal_Basis__c</fullName>
        <label>Meal Basis</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SB_Name_Of_Driver__c</fullName>
        <label>Name Of Driver</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SB_Name__c</fullName>
        <description>Excursion , Train , Car Hire</description>
        <label>Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SB_New_Page__c</fullName>
        <defaultValue>true</defaultValue>
        <label>New Page</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>SB_Night__c</fullName>
        <formula>SB_To_Date__c -  SB_From_Date__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Nights</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>SB_No_of_Rooms__c</fullName>
        <label>No of Rooms</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>SB_Not_Held__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Not Held</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>SB_Notes__c</fullName>
        <description>OTUK</description>
        <label>Notes</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>SB_Occupancy__c</fullName>
        <label>Occupancy</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SB_Opportunity__c</fullName>
        <label>Opportunity</label>
        <referenceTo>Opportunity</referenceTo>
        <relationshipLabel>Supplier Booking</relationshipLabel>
        <relationshipName>Supplier_Booking</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>SB_Option__c</fullName>
        <description>Car Hire and Transfer Option Details</description>
        <label>Option</label>
        <length>244</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SB_Order__c</fullName>
        <label>Order</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>SB_Own_Arrangement__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Own Arrangement</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>SB_PBR_Number__c</fullName>
        <label>PBR Number</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SB_Pax_for_Costing__c</fullName>
        <label>Pax for Costing</label>
        <picklist>
            <picklistValues>
                <fullName>1</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>3</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>4</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>5</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>6</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>7</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>8</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>9</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>10</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>11</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>12</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>13</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>14</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>15</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>16</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>17</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>18</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>19</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>20</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>SB_Payment_Type__c</fullName>
        <description>This is for Tickets and Vouchers</description>
        <label>Payment Type</label>
        <picklist>
            <picklistValues>
                <fullName>Prepaid</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>SB_Phone_No__c</fullName>
        <label>Phone No</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>SB_Pickup_Point__c</fullName>
        <label>Pickup Point</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SB_Pilot_Details__c</fullName>
        <label>Pilot Details</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SB_Provider_Telephone__c</fullName>
        <label>Provider Telephone</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SB_RecordType__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Record Type</label>
        <referenceTo>Record_Type__c</referenceTo>
        <relationshipLabel>Supplier Booking</relationshipLabel>
        <relationshipName>Supplier_Booking</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>SB_Remove_Date_Title__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Remove Date Title</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>SB_Remove_Images__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Remove Images</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>SB_Remove_TextArea__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Remove TextArea</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>SB_Reservation_Confirmed__c</fullName>
        <label>Reservation Confirmed?</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>SB_Reservation_Ref__c</fullName>
        <label>Reservation Ref</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SB_Room_Details__c</fullName>
        <inlineHelpText>Such as Bedding Set up</inlineHelpText>
        <label>Room Details</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SB_Room_Type__c</fullName>
        <description>The value must come from Room Type Object.</description>
        <label>Room Type</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SB_Sales_Currency__c</fullName>
        <label>Sales Currency</label>
        <picklist>
            <picklistValues>
                <fullName>USD</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>GBP</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>EUR</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>SB_Selling_Price_Actual__c</fullName>
        <label>Selling Price (Actual)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>SB_Show_Voucher__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Show Voucher</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>SB_Show_in_Itinerary__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Show in Itinerary?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>SB_Source__c</fullName>
        <label>Source</label>
        <picklist>
            <picklistValues>
                <fullName>Amadeus</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Lime Management</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Steamond Travel</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>SB_Suggested_Margin__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Suggested Margin</label>
        <referenceTo>Margin__c</referenceTo>
        <relationshipLabel>Supplier Booking</relationshipLabel>
        <relationshipName>Supplier_Booking</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>SB_Supplier_Name__c</fullName>
        <formula>SB_Supplier__r.Name</formula>
        <label>Supplier Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SB_Supplier_Notes__c</fullName>
        <label>SB Supplier Notes</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>SB_Supplier_Payment_Due_Date__c</fullName>
        <formula>SB_Opportunity__r.O_Departure_Date__c -  SB_Supplier__r.S_Payment_Terms_in_Days__c</formula>
        <label>Supplier Payment Due Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>SB_Supplier__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Supplier</label>
        <referenceTo>Supplier__c</referenceTo>
        <relationshipLabel>Supplier Booking</relationshipLabel>
        <relationshipName>Supplier_Booking</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>SB_Ticket_No__c</fullName>
        <label>Ticket No</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SB_To_Date__c</fullName>
        <label>To Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>SB_To_Place__c</fullName>
        <label>To Place</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SB_To_Station__c</fullName>
        <label>To Station</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SB_To_Time__c</fullName>
        <label>To Time</label>
        <length>5</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SB_Total_Vehicle__c</fullName>
        <label>Total Vehicle</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>SB_Train__c</fullName>
        <label>Train</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SB_Transfer_Car_Hire_Option__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>Transfer / Car Hire Option</inlineHelpText>
        <label>Transfer / Car Hire Option</label>
        <referenceTo>Transfer_Option__c</referenceTo>
        <relationshipLabel>Supplier Booking</relationshipLabel>
        <relationshipName>Supplier_Booking</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>SB_Type__c</fullName>
        <label>Type</label>
        <picklist>
            <picklistValues>
                <fullName>Per Person</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Shared</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>SB_Vehicle__c</fullName>
        <label>Vehicle</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SB_What_to_do__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>What to do</label>
        <referenceTo>Activity__c</referenceTo>
        <relationshipLabel>Supplier Booking</relationshipLabel>
        <relationshipName>Supplier_Booking</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>SB_Where_to_go__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Where to go</label>
        <referenceTo>Where_to_go__c</referenceTo>
        <relationshipLabel>Supplier Booking</relationshipLabel>
        <relationshipName>Supplier_Booking</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Sum_Margin__c</fullName>
        <label>Sum Of All Margin</label>
        <summarizedField>Supplier_Cost__c.SC_Margin__c</summarizedField>
        <summaryFilterItems>
            <field>Supplier_Cost__c.SC_Selected__c</field>
            <operation>equals</operation>
            <value>True</value>
        </summaryFilterItems>
        <summaryForeignKey>Supplier_Cost__c.SC_Supplier_Booking__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Total_Cost_Records__c</fullName>
        <label>Total Cost Records</label>
        <summaryFilterItems>
            <field>Supplier_Cost__c.SC_Selected__c</field>
            <operation>equals</operation>
            <value>True</value>
        </summaryFilterItems>
        <summaryForeignKey>Supplier_Cost__c.SC_Supplier_Booking__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <label>Supplier Booking</label>
    <nameField>
        <displayFormat>SB-{0000000000}</displayFormat>
        <label>Supplier Booking ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Supplier Booking</pluralLabel>
    <recordTypes>
        <fullName>Accommodation</fullName>
        <active>true</active>
        <description>Accommodation</description>
        <label>Accommodation</label>
    </recordTypes>
    <recordTypes>
        <fullName>Bulk_Cost</fullName>
        <active>true</active>
        <label>Bulk Cost</label>
    </recordTypes>
    <recordTypes>
        <fullName>Car_Hire</fullName>
        <active>true</active>
        <label>Car Hire</label>
    </recordTypes>
    <recordTypes>
        <fullName>Commission_Out</fullName>
        <active>true</active>
        <description>Agent Commissions</description>
        <label>Commission Out</label>
    </recordTypes>
    <recordTypes>
        <fullName>Commission_in</fullName>
        <active>true</active>
        <description>Commissions from Suppliers</description>
        <label>Commission In</label>
    </recordTypes>
    <recordTypes>
        <fullName>Complimentary</fullName>
        <active>true</active>
        <label>Complimentary</label>
    </recordTypes>
    <recordTypes>
        <fullName>Credit_Card</fullName>
        <active>true</active>
        <description>OTUK Credit Card</description>
        <label>Credit Card</label>
    </recordTypes>
    <recordTypes>
        <fullName>Credit_Memo</fullName>
        <active>true</active>
        <label>Credit Memo</label>
    </recordTypes>
    <recordTypes>
        <fullName>Cruise</fullName>
        <active>true</active>
        <label>Cruise</label>
    </recordTypes>
    <recordTypes>
        <fullName>Days_at_Leisure</fullName>
        <active>true</active>
        <label>Days at Leisure</label>
    </recordTypes>
    <recordTypes>
        <fullName>Description</fullName>
        <active>true</active>
        <label>Description</label>
    </recordTypes>
    <recordTypes>
        <fullName>Dinner_Reservation</fullName>
        <active>true</active>
        <label>Dinner Reservation</label>
    </recordTypes>
    <recordTypes>
        <fullName>Dom_Flights</fullName>
        <active>true</active>
        <label>Dom Flights</label>
    </recordTypes>
    <recordTypes>
        <fullName>Excursion</fullName>
        <active>true</active>
        <description>What to do</description>
        <label>Excursion</label>
    </recordTypes>
    <recordTypes>
        <fullName>Ferry</fullName>
        <active>true</active>
        <label>Ferry</label>
    </recordTypes>
    <recordTypes>
        <fullName>Int_Flight</fullName>
        <active>true</active>
        <label>Int Flight</label>
    </recordTypes>
    <recordTypes>
        <fullName>Light_Aircraft</fullName>
        <active>true</active>
        <label>Light Aircraft</label>
    </recordTypes>
    <recordTypes>
        <fullName>Meet_Greet</fullName>
        <active>true</active>
        <label>Meet &amp; Greet</label>
    </recordTypes>
    <recordTypes>
        <fullName>Motorbike_Ride</fullName>
        <active>true</active>
        <description>Motorbike Ride</description>
        <label>Motorbike Ride</label>
    </recordTypes>
    <recordTypes>
        <fullName>Notes</fullName>
        <active>true</active>
        <label>Notes</label>
    </recordTypes>
    <recordTypes>
        <fullName>Own_arrangement</fullName>
        <active>true</active>
        <label>Own arrangement</label>
    </recordTypes>
    <recordTypes>
        <fullName>Private_Jet</fullName>
        <active>true</active>
        <label>Private Jet</label>
    </recordTypes>
    <recordTypes>
        <fullName>Private_Road_Transfer</fullName>
        <active>true</active>
        <label>Private Road Transfer</label>
    </recordTypes>
    <recordTypes>
        <fullName>Private_Speed_Boat_Transfer</fullName>
        <active>true</active>
        <label>Private Speed Boat Transfer</label>
    </recordTypes>
</CustomObject>